feat(global-header): Created token for header logo, updated css to show logo via css (#2865)

--- a/packages/design-system/ui/components/global-header/base/_index.scss
+++ b/packages/design-system/ui/components/global-header/base/_index.scss
@@ -75,8 +75,12 @@
    * @required
    */
   &__logo {
-    flex-shrink: 0;
-    width: rem(45px);
+    width: rem(200px);
+    height: rem(40px);
+    background-image: url($header-logo-image);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: left center;
   }
 
   /**
