feat(data-tables): add radio group to advanced data tables (#2882)
* feat(data-tables): add radio group to advanced data tables

* feat(data-tables): add correct id and labels

* feat(data-tables): remove radio margin and add test

* feat(data-tables): fix aria-labelledby vnu error

* feat(data-tables): add id to header

* feat(data-tables): add comments

* feat(data-tables): change id

--- a/packages/design-system/ui/components/data-tables/base/_index.scss
+++ b/packages/design-system/ui/components/data-tables/base/_index.scss
@@ -151,6 +151,10 @@
   [role="gridcell"]:active {
     box-shadow: none;
   }
+
+  .slds-radio [type='radio'] + .slds-radio__label .slds-radio_faux {
+    margin-right: 0;
+  }
 }
 
 /**
