chore(branding): Cleanup branding page (#2893)
* chore(branding): Cleanup branding page

* Add vertical nav

--- a/packages/design-system/ui/components/branding/docs/Token.scss
+++ b/packages/design-system/ui/components/branding/docs/Token.scss
@@ -1,7 +1,12 @@
 // stylelint-disable selector-class-pattern
+.doc-tokens-group .slds-button {
+  margin: 1rem 0;
+}
+
 .doc-token {
   display: inline-flex;
-  margin: 0.5rem;
+  padding: 0.5rem;
+  font-size: 0.75rem;
 }
 
 .doc-token__image {
