feature(badges): new documentation (#2755)
* feature(badges): new documentation

* fix(icon badges): update icon

* fix(badges): Cleaned up docblocks, add additional tests for icons

--- a/packages/design-system/ui/components/badges/base/_index.scss
+++ b/packages/design-system/ui/components/badges/base/_index.scss
@@ -14,7 +14,7 @@
   padding: $spacing-xx-small $spacing-x-small;
   border-radius: $border-radius-pill;
   font-size: $font-size-x-small;
-  line-height: $line-height-heading;
+  line-height: normal;
   text-transform: uppercase;
   letter-spacing: 0.0625em;
   color: $color-text-default;
@@ -27,6 +27,10 @@
 
   &:empty {
     padding: 0;
+  }
+
+  .slds-icon_container {
+    vertical-align: middle;
   }
 }
 
