fix(sub-tabs): Fix active bg color token ref (#2899)

--- a/packages/design-system/ui/components/tabs/sub-tabs/_index.scss
+++ b/packages/design-system/ui/components/tabs/sub-tabs/_index.scss
@@ -46,7 +46,7 @@
 
   &.slds-active,
   &.slds-is-open {
-    background: rgba($color-background-context-bar-brand-accent, 0.1);
+    background: $brand-primary-transparent;
   }
 
   &:after {
