fix(global-navigation): adjust position of dirty state asterisk (#2888)
* fix(global-navigation): adjust position of dirty state asterisk

* Fix position of asterisk inside of dropdown menu

* Update position on subtabs, update test refs

--- a/packages/design-system/ui/components/global-navigation/navigation-bar/_index.scss
+++ b/packages/design-system/ui/components/global-navigation/navigation-bar/_index.scss
@@ -395,6 +395,11 @@
       position: relative;
       top: auto;
     }
+
+    .slds-indicator_unsaved,
+    .slds-indicator--unsaved {
+      top: rem(-6px);
+    }
   }
 }
 
@@ -432,7 +437,6 @@
   color: $color-text-brand;
   align-self: center;
   position: relative;
-  top: rem(-6px);
 }
 
 // Context Bar dropdown trigger specifics
