chore(carousel): fit and finish (#2890)
* chore(carousel): fit and finish

* Fix restriction rules

* Fix typo

--- a/packages/design-system/ui/components/carousel/_doc.scss
+++ b/packages/design-system/ui/components/carousel/_doc.scss
@@ -4,7 +4,7 @@
 /**
  * A Carousel can accept a maximum number of 5 panels where only 1 panel is visible at a time.
  *
- * You are able to navigate between panels but interacting with the `slds-carousel__indicator` elements that sit below the panel.
+ * You are able to navigate between panels by interacting with the `slds-carousel__indicator` elements that sit below the panel.
  *
  * A panel becomes visible by toggling the `slds-hide` class with the `slds-show` class on the `slds-carousel__panel` element.
  *
