--- a/packages/design-system/shared/styles/doc.scss
+++ b/packages/design-system/shared/styles/doc.scss
@@ -1,3 +1,4 @@
+// stylelint-disable selector-class-pattern
 // CodeView
 .docs-codeblock {
   margin-bottom: 2rem;
@@ -10,7 +11,7 @@
 }
 
 .docs-codeblock-example + .docs-codeblock-source {
-  border-top: none;
+  border-top: 0;
 }
 
 
@@ -30,7 +31,7 @@ h6.doc {
   color: #16325c;
 
   a.doc-anchor {
-    color:#706e6b;
+    color: #706e6b;
     font-size: inherit;
     margin-left: 0.5rem;
   }
@@ -38,7 +39,7 @@ h6.doc {
 
 h1.doc {
   font-size: 2.488rem;
-  margin-bottom: 2rem
+  margin-bottom: 2rem;
 }
 
 h2.doc {
@@ -182,12 +183,44 @@ tr.doc th:not(:first-child) {
 }
 
 code.doc {
-  background: #F6F9FB;
-  color: #1990B8;
+  background: #f6f9fb;
+  color: #1990b8;
   padding: 0 2px;
   border-radius: 0.125rem;
 }
 
 ul.doc-toc {
   margin-left: 1.5rem;
+}
+
+.doc-tokens-group .slds-button {
+  margin: 1rem 0;
+}
+
+.doc-token {
+  display: inline-flex;
+  padding: 0.5rem;
+  font-size: 0.75rem;
+}
+
+.doc-token__image {
+  width: 4rem;
+  height: 4rem;
+  background:
+    linear-gradient(45deg, rgba(43, 40, 38, 0.1) 25%, transparent 25%),
+    linear-gradient(-45deg, rgba(43, 40, 38, 0.1) 25%, transparent 25%),
+    linear-gradient(45deg, transparent 75%, rgba(43, 40, 38, 0.1) 75%),
+    linear-gradient(-45deg, transparent 75%, rgba(43, 40, 38, 0.1) 75%);
+  background-size: 16px 16px;
+  background-position: 0 0, 0 8px, 8px -8px, -8px 0;
+  border: 1px solid #dddbda;
+  border-radius: 4px;
+  padding: 4px;
+}
+
+.doc-token__image > div {
+  width: 100%;
+  height: 100%;
+  box-shadow: rgba(43, 40, 38, 0.1) 0 0 0 1px inset;
+  border-radius: 4px;
 }
