--- a/packages/design-system/ui/components/brand-band/_doc.scss
+++ b/packages/design-system/ui/components/brand-band/_doc.scss
@@ -1,4 +1,10 @@
 // Copyright (c) 2015-present, salesforce.com, inc. All rights reserved
 // Licensed under BSD 3-Clause - see LICENSE.txt or git.io/sfdc-license
 
-// Hidden for now
+/**
+ * @base
+ * @name brand-band
+ * @selector .slds-brand-band
+ * @support dev-ready
+ * @category brand
+ */
