fix(popovers): add clouds to walkthrough action and feature variants (#2904)
* fix(popovers): add clouds to walkthrough action and feature variants

* fix(popovers): import helpers and fix action popover attributes

* fix(popovers): fix linter errors

--- a/packages/design-system/ui/components/popovers/walkthrough/_index.scss
+++ b/packages/design-system/ui/components/popovers/walkthrough/_index.scss
@@ -79,5 +79,21 @@
 
   border-color: $popover-walkthrough-color-background-alt;
   background-color: $popover-walkthrough-color-background-alt;
+  background-image: url($popover-walkthrough-alt-image);
+  background-repeat: no-repeat;
+  background-position: bottom;
+  padding-bottom: $spacing-x-large;
   color: $color-text-inverse;
+
+  &.slds-nubbin_bottom,
+  &.slds-nubbin--bottom,
+  &.slds-nubbin_bottom-left,
+  &.slds-nubbin--bottom-left,
+  &.slds-nubbin_bottom-right,
+  &.slds-nubbin--bottom-right {
+
+    &:before {
+      background-color: $popover-walkthrough-alt-nubbin-color-background;
+    }
+  }
 }
