fix(path): Add/update tokens and their values (#2910)
* fix(path): Add/update tokens and their values

* fix(buttons)
: add disabled token

* Update snapshots

* Remove unused tokens, revert path colors

--- a/packages/design-system/ui/components/buttons/base/_index.scss
+++ b/packages/design-system/ui/components/buttons/base/_index.scss
@@ -169,8 +169,8 @@ a.slds-button--inverse:focus {
   @include button-brand;
 
   &[disabled] {
-    background: $color-background-button-brand-disabled;
-    border-color: $color-border-button-brand-disabled;
+    background: $brand-disabled;
+    border-color: $brand-disabled;
     color: $color-text-button-brand-disabled;
   }
 }
