--- a/packages/design-system/ui/components/button-icons/base/_index.scss
+++ b/packages/design-system/ui/components/button-icons/base/_index.scss
@@ -91,8 +91,8 @@
   @include button-brand;
 
   &[disabled] {
-    background: $color-background-button-brand-disabled;
-    border-color: $color-border-button-brand-disabled;
+    background: $brand-disabled;
+    border-color: $brand-disabled;
     color: $color-text-button-brand-disabled;
   }
 }
