feat(einstein-header): add einstein header to cards and popovers (#2834)
* feat(einstein-header): add einstein header to cards and popovers

* feat(einstein-header): change icon and add accessibility changes

* feat(einstein-header): add einstein variant to popover

* feat(einstein-header): add basic tests and snapshots

* feat(einstein-header): skip popover test until hyphen fix

* feat(einstein-header): add example to einstein-header component

* feat(einstein-header): tokenize images and gradient

* feat(einstein-header): add close button and fix accessibility issues

* feat(einstein-header): fix lint errors

* feat(einstein-header): remove not selector

* feat(einstein-header): fix a11y issue

* feat(einstein-header): edit svg dimensions

* feat(einstein-header): fix gradient

* feat(einstein-header): fix lint errors

* feat(einstein-headers): update headers to new design

* feat(einstein-headers): update snapshots

* feat(einstein-header): add new card header background

* feat(einstein-header): fix linter errors

* feat(einstein-header): fix react warning

* feat(einstein-header): make accessibility fixes and update tests

* feat(einstein-header): fix typo

* feat(einstein-header): fix scoping issue and update sizing

* feat(einstein-header): update snapshots

* feat(einstein-header): fix svgs and pixel size

* feat(einstein-header): update snapshots

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -91,6 +91,7 @@
   'popovers/panels/index',
   'popovers/nubbins/index',
   'popovers/walkthrough/index',
+  'popovers/einstein/index',
 
   // Tooltips
   'tooltips/base/index',
@@ -214,6 +215,9 @@
   // Tree (Order matters)
   'trees/base/index',
   'trees/grid/index',
+
+  // Einstein Headers
+  'einstein-header/base/index',
 
   // Expandable
   'expandable-section/base/index',
