feat(regions): Added pinned regions, added changes to subtabs and cards when used in pinned regions (#2920)
* feat(regions): Added pinned regions, added changes to subtabs and cards when used in pinned regions

* feat(regions): Added css for regions

* feat(regions): Updated css

* feat(regions): Updated cards css

* Add slds-region

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -222,5 +222,8 @@
   // Expandable
   'expandable-section/base/index',
 
+  // Regions
+  'regions/base/index',
+
   // Vertical Tabs
   'vertical-tabs/base/index';
