fix(global-navigation-tabs): Prevent icons to shrink with long text (#2928)
* fix(global-navigation-tabs): prevent icons to shrink with long text, fix ie11 bug for subtabs

* Update snapshots

--- a/packages/design-system/ui/components/global-navigation/navigation-bar/_index.scss
+++ b/packages/design-system/ui/components/global-navigation/navigation-bar/_index.scss
@@ -256,6 +256,7 @@
     padding: 0 $spacing-x-small;
     color: $color-text-context-bar;
     border-radius: 0;
+    flex-shrink: 0;
 
     &:focus {
       outline: 0;
@@ -417,6 +418,7 @@
     content: '';
     display: block;
     position: absolute;
+    left: 0;
     bottom: -3px;
     height: 3px;
     width: 100%;
