fix(mark): update mark styling for lookups and menu dropdowns (#2934)

--- a/packages/design-system/ui/components/menus/dropdown/_index.scss
+++ b/packages/design-system/ui/components/menus/dropdown/_index.scss
@@ -366,6 +366,7 @@
   mark {
     font-weight: $font-weight-bold;
     background-color: transparent;
+    color: inherit;
   }
 
   // Adjust position of dropdown with top nubbin
