fix(accordion): change accordion focus styling (#2930)

--- a/packages/design-system/ui/components/accordion/base/_index.scss
+++ b/packages/design-system/ui/components/accordion/base/_index.scss
@@ -51,6 +51,11 @@
 .slds-accordion__summary-heading {
   display: flex;
   flex-grow: 1;
+
+  .slds-button:focus {
+    text-decoration: underline;
+    box-shadow: none;
+  }
 }
 
 /**
