fix(expandable-section) Fix typo in summary (#2939)

--- a/packages/design-system/ui/components/expandable-section/_doc.scss
+++ b/packages/design-system/ui/components/expandable-section/_doc.scss
@@ -23,7 +23,7 @@
  * - When the user interacts with the button to open the section, `aria-expanded` on the button should be `true` and `aria-hidden` on the section should be `false`.
  * - When the user interacts with the button to close the section, `aria-expanded` on the button should be `false` and `aria-hidden` on the section should be `true`.
  *
- * @summary Toggle visibility a section content
+ * @summary Toggle visibility of section content
  *
  * @base
  * @name expandable-section
